--- a/060_조건문.ipynb
+++ b/060_조건문.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO4p3BV+xA2yaI/Tf689bm",
+      "authorship_tag": "ABX9TyPE+8tL/ZAmsfW6DUsvtCQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "q0mxOgXmQiHL"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "YSA4eYDyQnFi"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
         "id": "62fDFB52QnBT",
         "outputId": "6a1d386c-d119-4f8d-b253-9b457c1fcb1a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "QgeHy92HQm-H",
         "outputId": "73c1e754-e136-4c16-997c-e01d9b5da501"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
         "id": "aDc6qe1uQm6l",
         "outputId": "534d15de-0320-4a75-c6d2-b8683c11593c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
         "id": "VBNqgZdVQm3c",
         "outputId": "e4d1de24-b6b9-464b-cd74-721aabb6a884"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
       "metadata": {
         "id": "QiLJKYbrQm0A"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "FqVj_6WVQmwf"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +266,7 @@
         "id": "a1MmhlBOQmtU",
         "outputId": "7c8cbbb1-277c-4da5-f976-f7454af47d2e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +292,7 @@
         "id": "nXsUY6qOQmqL",
         "outputId": "89957a6d-a0ad-4a3c-99ee-90b2524cf43d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +333,7 @@
         "id": "k46pe2RvQmnC",
         "outputId": "3934dedb-05c7-4c12-82de-9940a5ae795e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +362,7 @@
         "id": "gME6Ha3NQiA8",
         "outputId": "ffb4a61d-2350-48c3-931c-b2c61d89c460"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
         "id": "fJQKfJp1Qh9a",
         "outputId": "d235a0b4-afbc-417a-c30b-31982f507965"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
       "metadata": {
         "id": "OsNbEGZrZU8N"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         },
         "outputId": "62f4cfdb-ff08-4e3f-bced-d99a6fc0bf73"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
         },
         "outputId": "ca1fcad4-286c-4ecf-f614-f54a1d17c39d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         },
         "outputId": "712fa2e3-0754-472e-f503-21c00ea45ca0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,7 +535,7 @@
         },
         "outputId": "babba211-11d6-4f1e-eed0-ed13577b9d37"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +563,7 @@
         },
         "outputId": "c444b231-7a85-40f0-9a60-f63c3e5b04c0"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,7 +591,7 @@
         },
         "outputId": "4adf8890-81cc-4863-fe13-46616aae68eb"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
         },
         "outputId": "5eb82faf-57bb-462c-bb19-fbf1aa72ac6d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,7 +647,7 @@
         },
         "outputId": "b181abcc-6713-4d53-87b6-19fe929311d0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +684,7 @@
         },
         "outputId": "0b2c819b-7d64-424e-b7bc-a15132081f90"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,7 +712,7 @@
         },
         "outputId": "e44e5d3e-8d8c-4316-ef56-f6e3674dc0cd"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +740,7 @@
         },
         "outputId": "8c2b9e0d-6edb-4727-c911-fe2a805ce9fb"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "fLz5DPy7Qd3D"
       },
@@ -787,7 +787,7 @@
         "id": "vspZxC1YcPlv",
         "outputId": "942a6a1f-e662-4635-c5c7-6edb2f0e7139"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +812,7 @@
         "id": "tu0vvMsBcPqq",
         "outputId": "bcc9d5ef-d037-4a47-f2b2-499e1b63c286"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -840,7 +840,7 @@
         "id": "dl2I0H6UcPvB",
         "outputId": "c7e0f179-ff70-4f9f-d142-fc21601f60b0"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,64 +855,297 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# is 연산\n",
+        "타입 확인"
+      ],
+      "metadata": {
+        "id": "a1xruKBbfNxt"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 명심: 파이썬의 모든 타입은 결국 객체다.\n",
+        "# 즉, 특정 변수나 값이 어떤 타입(어떤 객체)인지 확인하여 True / False 판별하는 키워드 is"
+      ],
       "metadata": {
         "id": "bhyO7q3xeEAc"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 10\n",
+        "type(a) is int"
+      ],
       "metadata": {
-        "id": "OaeqWR1teEJ8"
+        "id": "OaeqWR1teEJ8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c490ac94-813f-44a4-be22-638cea1df077"
       },
-      "execution_count": 38,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a is int"
+      ],
       "metadata": {
-        "id": "S7LrcwyheELy"
+        "id": "S7LrcwyheELy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2cdc19a6-bc12-499c-ae73-8581ace6d7d1"
       },
-      "execution_count": 38,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 10.0\n",
+        "type(a) is int"
+      ],
       "metadata": {
-        "id": "BRJ3vrHKeENr"
+        "id": "BRJ3vrHKeENr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01365a78-10e6-4ef0-87e1-95f5b9949cca"
       },
-      "execution_count": 38,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = [10, 20, 30]\n",
+        "type(a) is list"
+      ],
       "metadata": {
-        "id": "9Dh3hk5-eEPV"
+        "id": "9Dh3hk5-eEPV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e98d1c5-93f1-4e2d-a590-59e9d5eda36f"
       },
-      "execution_count": 38,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = [10, 20, 30]\n",
+        "type(a) is tuple"
+      ],
       "metadata": {
-        "id": "VGzb4pEGeEbI"
+        "id": "VGzb4pEGeEbI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "736ad33f-96f4-4e67-89ab-429216079bba"
       },
-      "execution_count": 38,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# pass 키워드\n",
+        "아무것도 안하는 블럭에는 꼭 명시!"
+      ],
+      "metadata": {
+        "id": "hCbiD_X4frvm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if 10 in a:\n",
+        "# else :\n",
+        "#   print('없어요')\n",
+        "# 참일때 동작이 안정해져 있어 에러\n",
+        "# SyntaxError: expected 'else' after 'if' expression"
+      ],
+      "metadata": {
+        "id": "EpV1ijlAeEcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "outputId": "f70a9eca-a88a-4a23-d550-6548d0903a44"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "expected 'else' after 'if' expression (<ipython-input-8-01ed0f12f96e>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-01ed0f12f96e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1 if 10 in a;\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected 'else' after 'if' expression\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 10 in a:\n",
+        "  pass #아무것도 안하는 블럭이라면 pass를 명시해야함\n",
+        "else:\n",
+        "  print('없어요')"
+      ],
+      "metadata": {
+        "id": "1ICpBbvmfqdc"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 블럭 수행구문이 한문장이면\n",
+        ": (콜론) 다음에 한줄로 작성가능"
+      ],
+      "metadata": {
+        "id": "AaVd7naMgRaG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 10 in a : print('Hello')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G1FYbBN1fqi7",
+        "outputId": "97586d62-80a5-45db-8cdf-a04346301680"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conditional Expression\n",
+        "구문 `(참일때의 값) if (조건식) else (거짓일때의 값)`"
+      ],
+      "metadata": {
+        "id": "98X8_PlhgtRW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "10 if 0 > 1 else -1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pexqy94bfqoH",
+        "outputId": "6c14c903-660d-4854-ed78-92cb32a98258"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1RbcL9Vvfqtj"
+      },
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "EpV1ijlAeEcf"
+        "id": "ILB_pM8mfqy9"
       },
       "execution_count": null,
       "outputs": []
